# epub-summarizer

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: index.html
src/epub_summarizer/: __main__.py  cli.py  epub_parser.py  html_report.py  models.py  openai_client.py  settings.py
src/epub_summarizer/prompts/: __init__.py  chapter_summary.txt
